# salesman

./: .gitignore  LICENSE  README.md  TODO  salesman.cabal
data/: emptyPackage.xml  package.xml
src/: Database.hs  Install.hs  Instance.hs  List.hs  Main.hs  OptionTypes.hs  Process.hs  Remove.hs
src/Salesman/: Database.hs  Install.hs  Instance.hs  List.hs  OptionTypes.hs  Process.hs  Remove.hs
