name:                salesman
version:             0.1.0.0
synopsis:            A sales(force) man(ager)
-- description:
license:             MIT
license-file:        LICENSE
author:              Thomas Dziedzic
maintainer:          gostrc@gmail.com
-- copyright:
category:            Distribution
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10
data-dir:            data
data-files:          package.xml
                   , emptyPackage.xml
                   , salesman_json.resource-meta.xml

executable salesman
  main-is:             Main.hs
  ghc-options:         -Wall
  other-modules:       OptionTypes
                     , Install
                     , List
                     , Database
                     , Instance
                     , Process
                     , Remove
  -- other-extensions:
  build-depends:       base >= 4.7 && < 4.8
                     , optparse-applicative >= 0.9.0 && < 0.10
                     , transformers >= 0.4.1.0 && < 0.5
                     , mtl >= 2.2.1 && < 2.3.0
                     , directory >= 1.2.1.0 && < 1.3
                     , process >= 1.2.0.0 && < 1.3
                     , aeson >= 0.7.0.6 && < 0.8
                     , bytestring >= 0.10.4.0 && < 0.11
                     , temporary >= 1.2.0.3 && < 1.3
                     , containers >= 0.5.5.1 && < 0.6
                     , split >= 0.2.2 && < 0.3
  hs-source-dirs:      src
  default-language:    Haskell2010
